add some changes

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-map-gl": "^7.1.7",
     "react-owl-carousel": "^2.3.3",
     "react-quill": "^2.0.0",
+    "react-select": "^5.9.0",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "resend": "^4.0.0",
