--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "file-loader": "^6.2.0",
     "framer-motion": "^11.3.29",
     "fs": "^0.0.1-security",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
